# electrocute

./: Cargo.toml  Trunk.toml  index.html  lib.rs  rust-toolchain.toml  sample.netlist
benches/: linear.rs
src/: buffer.rs  circuit.rs  component.rs  expression.rs  lib.rs  main.rs  net.rs  numbers.rs  parser.rs  printing.rs  si.rs  solve.rs  strategy.rs
src/component/: mod.rs  passive.rs  sources.rs
src/numerical/: complex.rs  equations.rs  mod.rs  numbers.rs  solve.rs
